create room api
