# app/controllers/v1/rooms_controller.rb
@@ -5,5 +5,18 @@ module V1
       page = params[:page] || 1
       @rooms = Room.all.page(page).per(PER)
     end
+
+    def create
+      @room = Room.new(room_params)
+      @room.save!
+    rescue ActiveRecord::RecordInvalid
+      render json: { code: :bad_request, message: @room.errors.full_messages }, status: :bad_request
+    end
+
+    private
+
+    def room_params
+      params.permit(:name)
+    end
   end
 end
